--- a/tex/codemech.tex
+++ b/tex/codemech.tex
@@ -19,7 +19,7 @@
 \renewcommand\CODE[1]{%
 	{%
 		\ADDCODE{\href{\codeprefix#1}{\texttt{#1}}}%
-		{\href{\codeprefix#1}{\#\arabic{codeindex}}}%
+		{\href{\codeprefix#1}{\color{gray}\#\arabic{codeindex}}}%
 	}%
 }
 \newcount\fooo
