--- a/tex/main.tex
+++ b/tex/main.tex
@@ -311,7 +311,7 @@ Edges are broken into bits under \SI{20}{m}.
 %
 When modeling individual trips,
 their reported endpoints
-are snapped to the nearest grpah node;
+are snapped to the nearest graph node;
 we ignore $\sim$10\% of records
 where the discrepancy is over \SI{20}{m}.
 %
