--- a/tex/main.tex
+++ b/tex/main.tex
@@ -376,7 +376,7 @@ are not sufficiently incentivised for detours
 	\begin{subfigure}{0.32\linewidth}
 		\includegraphics[width=\textwidth]{20210613-GraphWithLag/b_train/v1/lag/H=18/UTC-20210615-132827/train/velocity_i=9.png}
 		
-		\caption{Inferred mean-field velocity.}
+		\caption{Inferred mean-field speed.}
 		\label{f:mfv}
 	\end{subfigure}
 		
