dedup code link

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -347,6 +347,7 @@ This is repeated.
 %
 %
 \marginnote{\CODE{code/model/20210613-GraphWithLag/b_train.py}}
+\edef\codegraphwithlag{\thecodeindex}
 
 %
 
@@ -382,7 +383,7 @@ are not sufficiently incentivised for detours
 		
 	\vspace{0.25\baselineskip}%
 	\marginnote{%
-		{\protect\CODE{code/data/20210611-OSM/e_explore.py}}, {\protect\CODE{code/model/20210613-GraphWithLag/b_train.py}}
+		{\protect\CODE{code/data/20210611-OSM/e_explore.py}}, {\protect\codereref{\codegraphwithlag}}
 	}%
 	\vspace{-0.25\baselineskip}
 
